<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_text_search_query_hint">Enter search query</string>
    <string name="button_search_image_text">Search image</string>
    <string name="button_take_picture_text">Take picture</string>
    <string name="title_activity_image_list">ImageListActivity</string>
    <string name="image_view_picture_description">One of searched pictures</string>
    <string name="empty_image_list">No found images</string>
    <string name="narrow_search_title">Narrow your search</string>
    <string name="narrow_search_summary">Add parameters for search query</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_narrow_search_key">narrow_search</string>

    <string name="pref_domain_key">domain</string>
    <string name="domain_title">Search in the domain</string>
    <string name="domain_summary">Search within the specified domain</string>

    <string name="pref_count_of_image_key">count_of_image</string>
    <string name="count_images_list_title">Count of images</string>
    <string name="count_images_list_summary">Count of displayed images</string>
    <string name="pref_count_of_image_default">4</string>
    <string-array name="count_images_list">
        <item>one</item>
        <item>four</item>
        <item>eight</item>
    </string-array>
    <string-array name="count_images_list_values">
        <item>1</item>
        <item>4</item>
        <item>8</item>
    </string-array>

    <string name="pref_image_colorization_key">colorization</string>
    <string name="image_colorization_title">Colorization</string>
    <string name="image_colorization_summary">Colorization type of image</string>
    <string name="image_colorization_default">color</string>
    <string-array name="image_colorization_list">
        <item>Color</item>
        <item>Gray</item>
    </string-array>
    <string-array name="image_colorization_list_values">
        <item>color</item>
        <item>gray</item>
    </string-array>

</resources>
